[gd_scene load_steps=4 format=3 uid="uid://doejyp5galb8y"]

[ext_resource type="Script" path="res://scenes/bola/bola.gd" id="1_1mlgt"]
[ext_resource type="Texture2D" uid="uid://qx1sktd7ot03" path="res://img/i7261b71f-d571-4dd4-a992-177d9fc97928.png" id="1_tdgig"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tw0yo"]
radius = 11.0

[node name="Bola" type="Area2D"]
script = ExtResource("1_1mlgt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_tdgig")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tw0yo")

[node name="TimerDaBola" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimerDaBola" to="." method="_on_timer_da_bola_timeout"]
